--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </style>
 </head>
 <body>
+    <img src="image/ChristmasLights.png" alt="Christmas Lights Divider" class="section-divider">
+
+    <div id="snow-container"></div>
     <header>
         <button id="theme-switch">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#E8EAED"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
@@ -55,22 +58,27 @@
     
 
     <div class="middle-column">
-        <div class="pfp">
-                <a href="Profile Picture">
-                    <img src="image/Zenitsu derp.jpg" alt="Profile picture" id="pfp">
-                </a>
-                <h1 id="Profile picture">Kevin Chang</h1>
-                <p><a href="https://github.com/changkevin51" class="link" target="_blank">GitHub</a></p>
+        <div class="middle-column">
         </div>
-
+        <div class="pfp">
+            <a href="Profile Picture">
+                <img src="image/Zenitsu derp.jpg" alt="Profile picture" id="pfp">
+            </a>
+            <h1 id="Profile picture">Kevin Chang</h1>
+            <div class="links-container">
+                <a href="https://github.com/changkevin51" class="link" target="_blank">GitHub</a>
+                <a href="https://www.instagram.com/d0ntmindme1/" class="link" target="_blank">Instagram</a>
+            </div>
+        </div>        
         <div>
             <h2 class="title">Who I am</h2>
             <ul>
                 <li>High school student at Merivale High School (IB)</li>
-                <li>I live in Ottawa, Ontario, Canada</li>
+                <li>I live in <span id="location">Ottawa</span></li>
                 <li>Love <span id="words">Badminton</span></li>
             </ul>
         </div>
+        
 
         <div>
             <h2 class="title">What I do</h2>
@@ -82,19 +90,20 @@
         </div>
 
         <div>
-            <h2 class="title">My Apps (ft. Streamlit)</h2>
+            <h2 class="title">Featured Projects</h2>
             <ul>
                 <li>
-                    Check out: <span id="apps"><a href="https://analyse-sentiment.streamlit.app/" target="_blank">Sentiment Analysis App</a></span>
+                    Check out: <span id="apps"><a href="https://changkevin51.github.io/TowerDefense/" target="_blank">Awesome (and challenging) Tower Defense Game</a></span>
                 </li>
                 <li>
-                    Check out: <span id="apps"><a href="https://detectlanguage.streamlit.app//" target="_blank">Language Detection App (with jokes!)</a></span>
+                    Check out: <span id="apps"><a href="https://changkevin51.pythonanywhere.com/" target="_blank">Trivia App (Flask)</a></span>
                 </li>
                 <li>
                     Check out: <span id="apps"><a href="https://github.com/changkevin51/Object-Detection-app" target="_blank">Object Detection App</a></span>
                 </li>
             </ul>
         </div>     
+        <img id="christmas-tree" src="image/ChristmasTree.png" alt="Christmas Tree">
         <script>
             document.getElementById('theme-switch').addEventListener('click', function () {
                 const arrow = document.getElementById('arrow');
@@ -102,9 +111,57 @@
                     arrow.style.transition = 'opacity 0.5s ease-out';
                     arrow.style.opacity = '0';
                     setTimeout(() => {
-                        arrow.style.display = 'none'; // Fully hide after fade-out
+                        arrow.style.display = 'none'; 
                     }, 500);
                 }
+            });
+
+            document.addEventListener('DOMContentLoaded', () => {
+                const snowContainer = document.getElementById('snow-container');
+                const body = document.body;
+                const maxSnowflakes = 12; 
+                let currentSnowflakes = 0;
+
+                const createSnowflake = () => {
+                    if (currentSnowflakes >= maxSnowflakes) return;
+
+                    const snowflake = document.createElement('div');
+                    snowflake.className = 'snowflake';
+                    snowflake.textContent = '❄';
+
+                    // Random horizontal position
+                    snowflake.style.left = `${Math.random() * 100}vw`;
+
+                    // Random size
+                    const size = Math.random() * 10 + 10; // Between 10px and 20px
+                    snowflake.style.width = `${size}px`;
+                    snowflake.style.height = `${size}px`;
+
+                    // Random animation duration
+                    const duration = Math.random() * 5 + 3; // Between 3s and 8s
+                    snowflake.style.animationDuration = `${duration}s`;
+
+                    // Apply theme-based color
+                    snowflake.style.color = getComputedStyle(body).getPropertyValue('--snowflake-color');
+
+                    // Append to container and increment counter
+                    snowContainer.appendChild(snowflake);
+                    currentSnowflakes++;
+
+                    // Remove snowflake after animation and decrement counter
+                    snowflake.addEventListener('animationend', () => {
+                        snowflake.remove();
+                        currentSnowflakes--;
+                    });
+                };
+
+                setInterval(createSnowflake, 500);
+
+                document.getElementById('theme-switch').addEventListener('click', () => {
+                    document.querySelectorAll('.snowflake').forEach(snowflake => {
+                        snowflake.style.color = getComputedStyle(body).getPropertyValue('--snowflake-color');
+                    });
+                });
             });
         </script>        
     </body>
