Added contact me page

--- a/index.html
+++ b/index.html
@@ -94,11 +94,21 @@
                 <li>Badminton :D</li>
                 <li>Eating</li>
             </ul>
-        </div>        <div>
+        </div>        <!-- Projects Section -->
+        <div>
             <h2 class="title">Projects</h2>
             <ul>
                 <li>
                     View my projects: <span id="apps"><a href="projects.html">Portfolio</a></span>
+                </li>
+            </ul>
+        </div>
+        <!-- Contact Section -->
+        <div>
+            <h2 class="title">Contact</h2>
+            <ul>
+                <li>
+                    Get in touch: <span id="contact"><a href="contact.html">Contact Me</a></span>
                 </li>
             </ul>
         </div>
